# saleor_external_auth_plugin

./: .gitignore  pyproject.toml
saleor_external_auth_plugin/: constants.py  external_auth.py  external_auth_types.py  plugin.py  utils.py
saleor_external_auth_plugin/tests/: test_auth.py
social_auth/: plugin.py
social_auth/tests/: fixtures.py
