[tool.poetry]
name = "saleor-external-auth-plugin"
version = "0.2.0"
description = "Social auth for saleor"
authors = ["Wellington Zenon <wellington.zenon@gmail.com>"]
packages = [
    { include = "plugin.py", from="saleor_external_auth_plugin"}
]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."saleor.plugins"]
"saleor_external_auth_plugin" = "saleor_external_auth_plugin.plugin:ExternalAuthPlugin"